# python-makefun

./: .coveragerc  .gitignore  .travis.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile-requirements.txt  noxfile.py  noxfile_utils.py  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: all_nox.yml  base.yml
api_reference/: index.html
changelog/: index.html
ci_tools/: .pylintrc  Readme-travis.md  generate-junit-badge.py  github_release.py  github_travis_rsa.enc  nox_utils.py  noxfile_utils.py  requirements-pip.txt  run_tests.sh  write_version.py
docs/: api_reference.md  changelog.md  index.md  long_description.md  mkdocs.yml
junit/: junit.xml  report.html
long_description/: index.html
makefun/: __init__.py  _main_latest_py.py  _main_legacy_py.py  main.py  makefun.py
makefun/tests/: _test_py35.py  test_advanced.py  test_compile_deco.py  test_create_from_signature.py  test_create_from_string.py  test_create_from_string_cases.py  test_doc.py  test_generators_coroutines.py  test_issues.py  test_main.py  test_partial_and_macros.py  test_so.py  test_subfunctions.py
reports/coverage/: class_index.html  coverage.xml  coverage_html.js  d_454e1cc28c844367___init___py.html  d_454e1cc28c844367__main_latest_py_py.html  index.html  (+27 more)
search/: search_index.json
tests/: _test_py35.py  _test_py36.py  _test_py38.py  issue_85_module.py  test_advanced.py  test_create_from_signature.py  test_create_from_string.py  test_create_from_string_cases.py  test_generators_coroutines.py  test_issues.py  test_partial_and_macros.py  test_so.py
(+10 files in other folders)
