[build-system]
requires = [
    "setuptools>=39.2,<72",   # later versions do not read 'tests_require' from setup.cfg anymore
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

# pip: no ! does not work in old python 2.7 and not recommended here
# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#basic-use
